fix overflow-x

--- a/cb-ui-temp-01/style/main.css
+++ b/cb-ui-temp-01/style/main.css
@@ -1,3 +1,6 @@
+html,body {
+    overflow-x: hidden;
+}
 @font-face {
     font-family: vazir;
     src: url(../fonts/Vazir.woff);
